--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ body {
     width: 50px;
     height: 50px;
     background-color: #4CAF50;
+    /* Add an image of a dinosaur */
+    background-image: url('https://i.imgur.com/S4h9nS5.png');
+    background-size: cover;
 }
 
 .cactus {
@@ -31,4 +34,7 @@ body {
     width: 30px;
     height: 50px;
     background-color: #FF5733;
+    /* Add an image of a cactus */
+    background-image: url('https://i.imgur.com/uU9eN1j.png');
+    background-size: cover;
 }
